--- a/app/about/about.component.html
+++ b/app/about/about.component.html
@@ -83,5 +83,107 @@
                 </section>
             </div>
         </article>
+        <article class="article article-style-a">
+            <header class="article-header">
+                <h2 class="article-header">
+                    Work History
+                </h2>
+            </header>
+            <div class="article-body">
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">Building Blocks</h2>
+                    </header>
+                    <div class="section-body">
+                        <p>
+                            <strong>
+                            Started:
+                            </strong>
+                            April 2012
+                        </p>
+                        <p>
+                            Started as a junior developer on the service desk, here I spent my time working through support tickets from our clients, mainly on a couple of clients that I was assigned to. These tickets were usually small bugs or improvements that required working with a CMS called Tridion and working in a .net c# environment.
+                        </p>
+                        <p>
+                            At this time I didn't really know much .net (and still don't) so I had to learn as I went. There wasn't a whole lot of front end work but as I progressed I had more of the front end tasks assigned to me as that became my strongest area and something I enjoyed more.
+                        </p>
+                        <p>
+                            Working on the service desk is pretty challenging and helped me develop my debugging skills greatly. I made it clear that I wanted to join the front end team after a while here and I was eventually (after 18months) moved off service desk and moved into the front end team
+                        </p>
+                        <p>
+                            I've now been on the front end team since September 2013 and over this time have become more and more central to that team and have been the lead front end dev on projects for a while now.
+                        </p>
+                    </div>
+                </section>
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">Gold Search Media</h2>
+                    </header>
+                    <div class="section-body">
+                        <p>
+                            <strong>
+                            Started:
+                            </strong>
+                            June 2011
+                        </p>
+                        <p>
+                            This was my first job in the industry straight off the back of my HND in web development. It was a small agency in Manchester working with small to medium businesses around the country, building sites for driving instructors up to companies working in the solar panel and construction industry which were obviously turning over a lot more money.
+                        </p>
+                        <p>
+                            The sites we built were just small static sites, occasionally we'd have to build something in wordpress but mostly just html pages with no back end at all.
+                        </p>
+                        <p>
+                            At this time I was just writing html, css and using javascript plugins, at this point I didn't really know any JS at all and this was just prior to responsive sites becoming the norm and before less and sass had become widely used. So very basic but a good start in the industry, a world away from what I do now.
+                        </p>
+                        <p>
+                            Unfortunately this company ran into financial difficulties and I was made redundant, they no longer exist as a business I'm sad to say. Luckily for me I secured a position at Building Blocks and it's been the making of my career to this point.
+                        </p>
+                    </div>
+                </section>
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">Prior to working in web</h2>
+                    </header>
+                    <div class="section-body">
+                        <p>
+                            Before I got into the industry I'd had a number of jobs in customer service and sales and completed two courses at university, I really didn't know what I was doing and what direction to go in.
+                        </p>
+                        <p>
+                            Out of college (2001) I worked in a call centre for the mobile network O2, I wouldn't recommend call centre work, destroys the soul.
+                        </p>
+                        <p>
+                            In my desperate attempt to find a career I almost joined the Army! I went through the whole selection process and was offered a position in the Royal Signals, after much deliberation I decided this wouldn't be the best route for me after all (thank god! Don't think I would've thrived in this environment).
+                        </p>
+                        <p>
+                            So onto another job, DRL, another call centre, again, not for me, didn't enjoy the work, the company itself was fine but this type of work just wasn't right for me.
+                        </p>
+                        <p>
+                            Time for another job! This time as a sales person at an appliance store called Miller Brothers, a bit like Comet or Currys. This was up and down for me but ultimately I'm not a sales person, it's just not in me and I don't think I have the personality type for this profession.
+                        </p>
+                        <p>
+                            A drastic change was needed so I decided to get a degree, in anything! So off to the University of Bolton (<a href="http://www.bolton.ac.uk/Home.aspx">yes it's a real place</a>) where I studied and acquired a degree in Psychology. Great subject, very interesting, I recommend it as a subject to learn but probably not the best in terms of job prospects...
+                        </p>
+                        <p>
+                            Once I had finished my degree I was still no closer to figuring out what sort of work I would like and there was very little in the way of career paths with a degree in Psychology unfortunately.
+                        </p>
+                        <p>
+                            I ended up getting a bank job, something at the time I felt was a solid, respectable job, this was prior to the financial crisis. Off to Alliance and Leicester (now Santander). Here I worked behind the cash desk and then moved on to become a 'personal advisor' helping people by setting up bank accounts, applying for loans and credit cards for people and setting up and recommending savings accounts.
+                        </p>
+                        <p>
+                            The bank was ok but I joined in 2008, just as the 'credit crunch' (aka the huge recession) kicked in, not really a good time to work in a bank. I also didn't find the work particularly fulfilling, it also involved sales which I didn't know when I joined, so again not a good role for me.
+                        </p>
+                        <p>
+                            So fast forward a year, working in a bank in a job I don't enjoy and as such I don't have much in the way of career options. There had to be something else I could do that I'd actually enjoy!
+                        </p>
+                        <p>
+                            I started to really think about what I enjoyed and what I could potentially do for work in the areas I enjoy. I liked computers, maybe I could do something in IT? I again turned to the University of Bolton to see what courses I could do, web development seemed like the most interesting so I'd signed up for a HND in 'multimedia and web development'.
+                        </p>
+                        <p>
+                            I started my HND in September 2009 and went part time at the bank, I finished my course in June 2011 and found a job the same week that I took my last exam and now all these years later I'm a .com millionaire, well, not quite but at least I finally do something I enjoy and that I'm good at. Happy days!
+                        </p>
+                    </div>
+                </section>
+            </div>
+        </article>
     </div>
 </section>
