--- a/sass/components/profile.scss
+++ b/sass/components/profile.scss
@@ -27,6 +27,9 @@
     @media #{$BPD} {
         padding: 10px;
         width: 20%;
+        max-width: 180px;
+        float: right;
+        text-align: right;
     }
 
     img {
