--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,7 @@
 @import 'components/sections';
 @import 'components/articles';
 @import 'components/profile';
+@import 'components/blog';
 
 // Helpers
 @import 'utilities/utilities';
