making things work

--- a/app/blog/blog.component.html
+++ b/app/blog/blog.component.html
@@ -1,6 +1,6 @@
 <section class="section section-style-a block block-size-a">
     <header class="section-header">
-        <h2 class="section-title">Inside my head</h2>
+        <h2 class="section-title">Blog</h2>
     </header>
     <div class="section-body">
         <p>
