adding blog entry form authentication

--- a/app/about/about.component.html
+++ b/app/about/about.component.html
@@ -19,7 +19,7 @@
                         I started out here as a junior dev on the service desk and then moved onto the front end team in September 2013, I'm now a senior member of this team and am lead FE dev on the projects I work on. Builidng Blocks tends to work with large international organisations so the projects I work on will normally be large site builds (as opposed to only building a microsite or landing page) starting from scratch with new designs provided to us and generally I have quite a lot of freedom in the build process (although everything does have to work as part of a CMS).
                     </p>
                     <p>
-                        I've been working in the industry since June 2011 so the vast majority of my career to date has been with Building Blocks, prior to this I worked at a very small agency called "Gold Search Media" which is no longer around (pretty sure that's unrelated to me working there though...).
+                        I've been working in the industry since June 2011 so the vast majority of my career to date has been with Building Blocks, prior to this I worked at a very small agency called "Gold Search Media" which is no longer around (pretty sure that's unrelated to me working there though...)
                     </p>
                 </div>
                 <figure class="profile-media">
@@ -36,7 +36,7 @@
                     In front end dev there's a ridiculous amount of tools and frameworks etc, available to use in order to build sites and there are new things being created all the time. I have my favourites like everyone else and I try to keep up to date with the latest trends, I've listed below what I use regularly. 
                 </p>
                 <p>
-                    My preferred approach to building is to create things in a very modular fashion rather than on a page basis, this our standard way to build at Building Blocks and it's very useful when building for a CMS. This is reflected in my class naming (e.g. .promo .promo-style-a), I find this way of naming helps me to really break down what a component/module is rather than what it's being used for in the context of one particular design.
+                    My preferred approach to building is to create things in a very modular fashion rather than on a page basis, this our standard way to build at Building Blocks and it's very useful when building for a CMS. This is reflected in my class naming (e.g. .promo .promo-style-a) but I'm now moving to BEM, I find this way of naming helps me to really break down what a component/module is rather than what it's being used for in the context of one particular design.
                 </p>
 
                 <section class="section section-style-b">
@@ -73,7 +73,7 @@
                         <ul class="list-style-a">
                             <li>Node.js</li>
                             <li>Angular2 with TypeScript</li>
-                            <li>CouchDB</li>
+                            <li>MongoDB</li>
                             <li>FireBase</li>
                             <li>Mapbox api</li>
                             <li>Google Maps api (V3)</li>
