--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -4,11 +4,10 @@ fullPage: true
 ---
 {{#extend "layout--a"}}
   {{#content "main"}}
+    
     <div class="row">
-        <div class="col m24">
-            <h2>{{example.title}}</h2>
-            <p>{{{example.intro}}}</p>
-        </div>
+        {{>intro/intro intro.intro_a}}
     </div>
+
   {{/content}}
 {{/extend}}
