--- a/src/partials/foot/foot-scripts.hbs
+++ b/src/partials/foot/foot-scripts.hbs
@@ -1,4 +1,5 @@
 {{!-- scripts --}}
+{{!--<script src="/_scripts/scripts.js"></script>--}}
 <script>
 	function getParameterByName(name) {
 	    name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
