--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,2 +1,5 @@
-<footer class="footer" role="footer">
+<footer class="footer" id="site-footer" role="contentinfo">
+    <p>
+        Andy Blackledge. Writer of codes. 2017. <a href="https://github.com/aFrontendDev/andyblackledge">Source of the codes (github)</a>
+    </p>
 </footer>
