--- a/src/assets/_styles/_03-elements/icons.scss
+++ b/src/assets/_styles/_03-elements/icons.scss
@@ -1,18 +1,18 @@
 // Icons
 
 @font-face {
-	font-family: '@{icon-font}';
-	src:url('@{directory-fonts}/@{icon-font}.eot?-gfwsty');
-	src:url('@{directory-fonts}/@{icon-font}.eot?#iefix-gfwsty') format('embedded-opentype'),
-	url('@{directory-fonts}/@{icon-font}.ttf?-gfwsty') format('truetype'),
-	url('@{directory-fonts}/@{icon-font}.woff?-gfwsty') format('woff'),
-	url('@{directory-fonts}/@{icon-font}.svg?-gfwsty#@{icon-font}') format('svg');
+	font-family: '#{$icon-font}';
+	src:url('#{$directory-fonts}/#{$icon-font}.eot?-gfwsty');
+	src:url('#{$directory-fonts}/#{$icon-font}.eot?#iefix-gfwsty') format('embedded-opentype'),
+	url('#{$directory-fonts}/#{$icon-font}.ttf?-gfwsty') format('truetype'),
+	url('#{$directory-fonts}/#{$icon-font}.woff?-gfwsty') format('woff'),
+	url('#{$directory-fonts}/#{$icon-font}.svg?-gfwsty##{$icon-font}') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 %icon {
-	font-family: '@{icon-font}';
+	font-family: '#{$icon-font}';
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -31,6 +31,21 @@
 	@extend %icon;
 }
 
-.icon-placeholder:before {
-	content: '\f096';
+.icon--close:before {
+    content: "\e904";
+}
+.icon--menu:before {
+    content: "\e905";
+}
+.icon--email:before {
+    content: "\e900";
+}
+.icon--linkedin:before {
+    content: "\e901";
+}
+.icon--twitter:before {
+    content: "\e902";
+}
+.icon--github:before {
+    content: "\e903";
 }
