--- a/src/assets/_styles/_03-elements/fonts.scss
+++ b/src/assets/_styles/_03-elements/fonts.scss
@@ -1,1 +1,15 @@
 // fonts.scss
+
+@font-face {
+    font-family: 'code_bold';
+    src: url('/_styles/fonts/code/code_bold-webfont.woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'code_light';
+    src: url('/_styles/fonts/code/code_light-webfont.woff');
+    font-weight: normal;
+    font-style: normal;
+}
