--- a/src/assets/_styles/_03-elements/lists.scss
+++ b/src/assets/_styles/_03-elements/lists.scss
@@ -22,3 +22,13 @@ ul {
 		padding: 0;
 	}
 }
+
+.list--style-a {
+	@extend .list-unstyled;
+
+	li {
+		border-bottom: dotted 2px $brand-black;
+		padding-left: $ggw;
+		margin-bottom: $vr*2;
+	}
+}
