--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,9 +1,11 @@
 <header class="header" id="header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
     <div class="header__inner navigation__menu-target">
         <h1 class="header__logo" itemscope itemtype="http://schema.org/WPHeader">
+            <span class="visually-hidden">
+                {{global.name}}
+            </span>
             <a href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 230" shape-rendering="geometricPrecision">
-                    <span class="visually-hidden">{{global.title}}</span>
                     <path class="svg-logo svg-logo-a" d="M16.2 205.3h-5.7L85.6 19.7h6.8l73.3 185.6H160l-24.4-61.1H40.9L16.2 205.3zM89.2 24.9h-0.5L43 139h90.5L89.2 24.9z"/>
                     <path class="svg-logo svg-logo-b" d="M166.2 20c7.3 0 14.1 1 20.4 2.9 6.3 1.9 11.9 4.8 16.6 8.7 4.8 3.9 8.5 8.7 11.2 14.4 2.7 5.7 4 12.5 4 20.3 0 5.5-1 10.8-3 15.9 -2 5-4.7 9.4-8.2 13.3 -3.5 3.8-7.6 6.9-12.4 9.2 -4.8 2.3-10 3.7-15.7 4v0.5c6.1 0.2 11.8 1.3 17.3 3.5 5.5 2.2 10.2 5.2 14.3 9.1 4.1 3.9 7.3 8.7 9.8 14.3 2.4 5.6 3.6 12 3.6 19.1 0 8.3-1.5 15.6-4.5 22 -3 6.3-7.2 11.6-12.6 15.7 -5.4 4.2-11.8 7.3-19.4 9.5 -7.5 2.2-15.7 3.2-24.6 3.2H86.4V20H166.2zM166.2 106.3c6.2 0 12.2-0.8 17.8-2.5 5.6-1.6 10.6-4.2 15-7.5 4.3-3.4 7.8-7.6 10.4-12.6 2.6-5 3.9-10.8 3.9-17.4 0-7.1-1.2-13.2-3.6-18.3 -2.4-5.1-5.8-9.4-10-12.7 -4.2-3.4-9.2-5.9-15-7.5 -5.7-1.6-11.9-2.5-18.5-2.5H91.6v81.1H166.2zM165.4 200.4c7.6 0 14.7-0.9 21.2-2.7 6.5-1.8 12.1-4.6 16.9-8.3 4.8-3.7 8.5-8.4 11.3-14 2.8-5.6 4.2-12.3 4.2-19.9 0-8.1-1.5-15-4.6-20.5 -3-5.5-7-10.1-12-13.5 -4.9-3.5-10.6-6-16.9-7.5 -6.3-1.6-12.8-2.3-19.4-2.3H91.6v88.9H165.4z"/>
                 </svg>
