--- a/src/pages/about.hbs
+++ b/src/pages/about.hbs
@@ -21,7 +21,7 @@ fullPage: true
                     <div class="article__body">
                         <div class="profile__copy">
                             <p>
-                                I'm a front end developer currently working at <a href="http://www.building-blocks.com" rel="external">Building Blocks</a> where I've been since April 2012.
+                                I'm a front end developer currently working at <a href="https://www.beautybay.com" rel="external">Beauty Bay</a> where I've been since 19th February 2018.
                             </p>
                             <p>
                                 I've been working in the industry since around 2010, building tiny static sites for driving instructors and local businesses all the way up to building the entire front end for huge, international, multi billion dollar businesses.
